# pyproject.toml

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "LiveboxMonitor"
version = "1.6"
description = "Advanced graphical user interface to control Livebox 4, 5, 6, 7, W7 & S"
readme = "README.md"
authors = [{ name = "Pierre Dor", email = "dorpierre@orange.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Home Automation"
]
keywords = ["livebox", "sysbus", "ui", "monitoring", "traffic"]
dependencies = [
    "PyQt6",
    "requests",
    "python-dateutil",
    "cryptography",
    "pyqtgraph",
    "wakepy"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = []

[project.urls]
homepage = "https://github.com/p-dor/LiveboxMonitor"
documentation = "https://p-dor.github.io/LiveboxMonitor"
source = "https://github.com/p-dor/LiveboxMonitor"
issues = "https://github.com/p-dor/LiveboxMonitor/issues"
changelog = "https://github.com/p-dor/LiveboxMonitor/releases"
discussions = "https://github.com/p-dor/LiveboxMonitor/discussions"
funding = "https://www.paypal.com/donate/?hosted_button_id=U7CLQM3WGTUEJ&locale.x=fr_FR"

[project.scripts]
LiveboxMonitor = "LiveboxMonitor.__main__:main"
